# highway

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  compile_flags.txt  vcpkg.json
src/: connection_properties.ui  context.hpp  facade.cpp  facade.hpp  kafka.cpp  kafka.hpp  kafka_consumer_properties.ui  main.cpp  main.ui  main_window.ui  state.cpp  state.hpp  ui.cpp  ui.hpp  untitled.ui
src/app/: CMakeLists.txt  connection_properties.ui  context.cpp  kafka.hpp  main.cpp  main_window.ui  state.cpp  state.hpp  ui.cpp  ui.hpp
src/core/: CMakeLists.txt  HelloWorld.java  consumer_fsm.hpp  extractor.h  facade.cpp  facade.hpp  hw.cpp  kafka.cpp  kafka.hpp  lib.cpp  org_svgroz_HelloWorld.h  state.cpp  state.hpp
src/test/: CMakeLists.txt  test1.cpp  test2.cpp
src/test_core/: CMakeLists.txt  kafka_test.cpp
